Sat Nov 16 10:22:28 CET 2013
OpenAL-1.15.1-i486-1_microlinux.txz: Added.
opencore-amr-0.1.2-i486-2_microlinux.txz: Added.
openjpeg-1.5.1-i486-2_microlinux.txz: Added.
rtmpdump-20120308_7340f6d-i486-2_microlinux.txz: Added.
soundtouch-1.6.0-i486-2_microlinux.txz: Added.
speex-1.2rc1-i486-2_microlinux.txz: Added.
twolame-0.3.13-i486-2_microlinux.txz: Added.
vcdimager-0.7.23-i486-2_microlinux.txz: Added.
x264-20120804-i486-2_microlinux.txz: Added.
xvidcore-1.3.2-i486-2_microlinux.txz: Added.
faac-1.28-i486-3_microlinux.txz: Added.
libass-0.10.1-i486-2_microlinux.txz: Added.
libshout-2.2.2-i486-2_microlinux.txz: Added.
schroedinger-1.0.11-i486-2_microlinux.txz: Added.
ffmpeg-0.11.1-i486-3_microlinux.txz: Added.
libquicktime-1.2.4-i486-2_microlinux.txz: Added.
mlt-0.8.8-i486-2_microlinux.txz: Added.
musepack-tools-r435-i486-2_microlinux.txz: Added.
gst-plugins-bad-0.10.23-i486-2_microlinux.txz: Added.
gst-plugins-ugly-0.10.19-i486-2_microlinux.txz: Added.
libmpeg2-0.5.1-i486-2_microlinux.txz: Added.
transcode-1.1.7-i486-2_microlinux.txz: Added.
+---------------------------+
Fri Nov 15 07:33:43 CET 2013
libiec61883-1.2.0-i486-3_microlinux.txz: Added.
libkate-0.4.1-i486-2_microlinux.txz: Added.
libmms-0.6.2-i486-2_microlinux.txz: Added.
libmodplug-0.8.8.4-i486-2_microlinux.txz: Added.
libmp4v2-2.0.0-i486-2_microlinux.txz: Added.
libmusicbrainz-2.1.5-i486-2_microlinux.txz: Added.
libreplaygain-r453-i486-2_microlinux.txz: Added.
libvpx-1.1.0-i486-2_microlinux.txz: Added.
live555-2011.12.23-i486-2_microlinux.txz: Added.
mjpegtools-2.0.0-i486-2_microlinux.txz: Added.
mplayer-codecs-20071007-i486-4_microlinux.txz: Added.
+---------------------------+
Thu Nov 14 09:31:28 CET 2013
a52dec-0.7.4-i486-2_microlinux.txz: Added.
celt-0.11.3-i486-2_microlinux.txz: Added.
dirac-1.0.2-i486-2_microlinux.txz: Added.
faad2-2.7-i486-2_microlinux.txz: Added.
flash-player-plugin-11.2.202.310-i386-1_microlinux.txz: Added.