@@ -1,0 +1,5 @@
+#!/bin/sh
+#
+CWD=$(pwd)
+ls $CWD/../../desktop-base-14.0-source \
+  > $CWD/pkglists/packages-desktop-base
