@@ -1,6 +1,78 @@
+a52dec
+acpica
+BeautifulSoup
+cddb-py
 cdlabelgen
+celt
+dirac
+enca
+eurostile-fonts
+faac
+faad2
+ffmpeg
+flash-player-plugin
+frei0r
+gc
+google-droid-fonts
+gsl
+gsm
+gst-ffmpeg
+gst-plugins-bad
+gst-plugins-ugly
+imlib2
+jdk
+lame
+libaacs
+libass
+libavc1394
+libbluray
+libburn
+libcdaudio
+libcuefile
+libdc1394
+libdca
+libdv
+libdvdcss
+libdvdnav
+libevent
+libiec61883
+libisoburn
+libisofs
+libkate
+libmms
+libmodplug
+libmp4v2
+libmpeg2
+libmusicbrainz
+libquicktime
+libreplaygain
+libshout
+libvpx
+live555
+lua
+mjpegtools
+mlt
+mlt.old
+mplayer-codecs
+musepack-tools
+numpy
+OpenAL
+opencore-amr
+openjpeg
+orc
 p7zip
 recode
+rtmpdump
 sbopkg
+schroedinger
+scons
+soundtouch
+speex
+transcode
+twolame
 unrar
 user-settings-console
+vcdimager
+webcore-fonts
+x264
+xvidcore
