@@ -1,0 +1,1 @@
+25c9afe2f32e804ea0bbccfbb10e609c  google-droid-fonts-20100409-2.fc15.src.rpm
